# revyl-cli

./: .air.toml  Makefile  README.md  cli_dogfood.md  device-sdk-methods.json  device-targets.json  go.mod  go.sum  openapi.json  package-lock.json  package.json
.cursor-plugin/: marketplace.json
.revyl/: config.yaml
cursor-plugin/: README.md  install-local.ps1  install-local.sh  mcp.json  plugin_contract_test.go  runtime-manifest.json  runtime_bootstrap_test.go
docs/: CI_CD.md  COMMANDS.md  CONFIGURATION.md  DEVELOPMENT.md  DEVICE_PROD_VALIDATION.md  MCP_SETUP.md  README.md  RELEASING.md  SDK.md  SKILLS.md  STREAMING.md  TEST_CREATION.md  atlas.md  ci-cd.md  cli-index.md  getting-started.md  guide-advanced-tests.md  guide-agent-journey-dev-loop.md  guide-authentication.md  guide-ci-cd.md  guide-cli-commands.md  guide-dev-loop.md  guide-dev-setup.md  guide-device-index.md  guide-device-quickstart.md  guide-device-reference.md  guide-device-scripting.md  guide-device-troubleshooting.md  guide-expo-integration.md  guide-first-test.md  guide-hot-reload.md  guide-interactive.md  guide-journey-ci-cd.md  guide-journey-dev-loop.md  guide-journey-first-test.md  guide-journey-test-suite.md  guide-multi-session.md  guide-running-tests.md  prompt-setup-expo-hotreload.md
e2e/: app_build_test.go  auth_test.go  device_test.go  (+13 more)
python/: README.md  hatch_build.py  pyproject.toml
python/revyl/: __init__.py  _binary.py  _device_targets.py  sdk.py
python/scripts/: device_prod_smoke.py
python/tests/: test_binary_integrity.py  test_sdk_clients.py  test_sdk_device_client.py  test_sdk_regression.py  test_sdk_spec_parity.py
(+511 files in other folders)
