[project]
name = "revyl"
version = "0.1.67"
description = "Revyl CLI - AI-powered mobile app testing"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Revyl", email = "support@revyl.ai" }
]
keywords = ["revyl", "mobile", "testing", "e2e", "automation", "ios", "android"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://revyl.com"
Documentation = "https://docs.revyl.ai"
Repository = "https://github.com/RevylAI/revyl-cli"

[project.scripts]
revyl = "revyl:main"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["revyl"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
release = [
    "build==1.5.0 ; python_full_version >= '3.10'",
    "hatchling==1.31.0 ; python_full_version >= '3.10'",
    "twine==6.2.0 ; python_full_version >= '3.10'",
]
